[project]
name = "connection-explorer"
version = "0.1.0"
description = "Snowflake Data Lake Access Visualization"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pyvis>=0.3.2",
    "pillow>=10.0.0",
    "snowflake-snowpark-python>=1.11.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
